read me updated

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
                    <div class="heading">
                     <h1 class="text-center">Exam Week-1</h1>
                    </div>
+
+                   <div class="main">
+                    <a href="./profile_card/profile_card.html" class="btn">Profile Card</a>
+                    <a href="./calculator/calculator.html" class="btn">Calculator</a>
+                    <a href="./bank_app/bank_app.html" class="btn">Bank App</a>
+                   </div>
                 </div>
             </div>
         </div>
