--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                    <div class="main">
                     <a href="./profile_card/profile_card.html" class="btn">Profile Card</a>
                     <a href="./calculator/calculator.html" class="btn">Calculator</a>
-                    <a href="./bank_app/bank_app.html" class="btn">Bank App</a>
+                    <a href="./bank_app/app.js" class="btn">Bank App</a>
                    </div>
                 </div>
             </div>
