--- a/profile_card/profile_card.html
+++ b/profile_card/profile_card.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card</title>
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/font-awesome-pro.css">
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
@@ -21,20 +22,16 @@
                 </div>
                 <div class="profile-stats">
                     <div class="project">
-                        <h5>Projects</h5>
-                        <p>18</p>
+                        <h5>Phone</h5>
+                        <p><i class="fa-sharp fa-solid fa-phone"></i> 01700826311</p>
                     </div>
                     <div class="following">
-                        <h5>Following</h5>
-                        <p>464</p>
-                    </div>
-                    <div class="followers">
-                        <h5>followers</h5>
-                        <p>852</p>
+                        <h5>Email Address</h5>
+                        <p><i class="fa-solid fa-envelope-dot"></i> info@nurnobi.net</p>
                     </div>
                 </div>
                 <div class="profile-cta">
-                    <a href="#" class="btn btn-sec">follow</a>
+                    <a href="#" class="btn btn-sec">Download CV</a>
                     <a href="#" class="btn">hire me</a>
                 </div>
             </div>
