--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -75,7 +75,7 @@
                 case "add":
                     result = num1 + num2;
                     break;
-                case "sub":
+                case "min":
                     result = num1 - num2;
                     break;
                 case "mul":
